# Apple-Notes

./: Project Bootstrap  pyproject.toml  requirements.txt
src/apple_notes_exporter/: main.py
src/apple_notes_exporter/core/: config.py  logger.py
src/apple_notes_exporter/gui/: main_window.py
