[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "apple-notes-exporter"
version = "0.1.0"
description = "Professional Apple Notes Export Tool for Windows"
authors = [
    {name="jacks6666"}
]

requires-python = ">=3.13"

dependencies = [
    "PySide6>=6.7",
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "reportlab>=4.2",
    "pillow>=10.4"
]


[project.scripts]

apple-notes-exporter = "apple_notes_exporter.main:main"


[tool.setuptools.packages.find]

where=["src"]
